june/src/codegen/tests/snapshots/june__codegen__tests__eq_commutative.snap
---
source: june/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    fun
    nonrec
    (
        Set0
        0
        1
        (
            (
                (
                    fun
                    nonrec
                    (
                        Set0
                        0
                    )
                    (
                        for
                        (
                            1
                        )
                        Prop0
                    )
                    (
                        ind
                        Prop0
                        "Eq"
                        (
                            2
                        )
                        (
                            (
                                ()
                                (
                                    2
                                )
                            )
                        )
                    )
                )
                2
                1
            )
            0
        )
    )
    (
        (
            (
                fun
                nonrec
                (
                    Set0
                    0
                )
                (
                    for
                    (
                        1
                    )
                    Prop0
                )
                (
                    ind
                    Prop0
                    "Eq"
                    (
                        2
                    )
                    (
                        (
                            ()
                            (
                                2
                            )
                        )
                    )
                )
            )
            3
            1
        )
        2
    )
    (
        match
        1
        2
        (
            (
                (
                    fun
                    nonrec
                    (
                        Set0
                        0
                    )
                    (
                        for
                        (
                            1
                        )
                        Prop0
                    )
                    (
                        ind
                        Prop0
                        "Eq"
                        (
                            2
                        )
                        (
                            (
                                ()
                                (
                                    2
                                )
                            )
                        )
                    )
                )
                6
                1
            )
            5
        )
        (
            (
                0
                (
                    (
                        fun
                        nonrec
                        (
                            Set0
                            0
                        )
                        (
                            (
                                ind
                                Prop0
                                "Eq"
                                (
                                    1
                                )
                                (
                                    (
                                        ()
                                        (
                                            1
                                        )
                                    )
                                )
                            )
                            0
                        )
                        (
                            vcon
                            (
                                ind
                                Prop0
                                "Eq"
                                (
                                    2
                                )
                                (
                                    (
                                        ()
                                        (
                                            2
                                        )
                                    )
                                )
                            )
                            0
                        )
                    )
                    4
                    3
                )
            )
        )
    )
)
