june/src/codegen/tests/snapshots/june__codegen__tests__eq_implies_substitutable.snap
---
source: june/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    fun
    nonrec
    (
        Set0
        0
        1
        (
            (
                (
                    fun
                    nonrec
                    (
                        Set0
                        0
                    )
                    (
                        for
                        (
                            1
                        )
                        Prop0
                    )
                    (
                        ind
                        Prop0
                        "Eq"
                        (
                            2
                        )
                        (
                            (
                                ()
                                (
                                    2
                                )
                            )
                        )
                    )
                )
                2
                1
            )
            0
        )
        (
            for
            (
                3
            )
            Prop0
        )
        (
            0
            3
        )
    )
    (
        1
        3
    )
    (
        match
        3
        2
        (
            4
            1
        )
        (
            (
                0
                1
            )
        )
    )
)
