june/src/codegen/tests/snapshots/june__codegen__tests__eq_refl.snap
---
source: june/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    fun
    nonrec
    (
        Set0
        0
    )
    (
        (
            ind
            Prop0
            "Eq"
            (
                1
            )
            (
                (
                    ()
                    (
                        1
                    )
                )
            )
        )
        0
    )
    (
        vcon
        (
            ind
            Prop0
            "Eq"
            (
                2
            )
            (
                (
                    ()
                    (
                        2
                    )
                )
            )
        )
        0
    )
)
