june/src/codegen/tests/snapshots/june__codegen__tests__eq_transitive.snap
---
source: june/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    fun
    nonrec
    (
        Set0
        0
        1
        2
        (
            (
                (
                    fun
                    nonrec
                    (
                        Set0
                        0
                    )
                    (
                        for
                        (
                            1
                        )
                        Prop0
                    )
                    (
                        ind
                        Prop0
                        "Eq"
                        (
                            2
                        )
                        (
                            (
                                ()
                                (
                                    2
                                )
                            )
                        )
                    )
                )
                3
                2
            )
            1
        )
        (
            (
                (
                    fun
                    nonrec
                    (
                        Set0
                        0
                    )
                    (
                        for
                        (
                            1
                        )
                        Prop0
                    )
                    (
                        ind
                        Prop0
                        "Eq"
                        (
                            2
                        )
                        (
                            (
                                ()
                                (
                                    2
                                )
                            )
                        )
                    )
                )
                4
                2
            )
            1
        )
    )
    (
        (
            (
                fun
                nonrec
                (
                    Set0
                    0
                )
                (
                    for
                    (
                        1
                    )
                    Prop0
                )
                (
                    ind
                    Prop0
                    "Eq"
                    (
                        2
                    )
                    (
                        (
                            ()
                            (
                                2
                            )
                        )
                    )
                )
            )
            5
            4
        )
        2
    )
    (
        (
            match
            2
            2
            (
                for
                (
                    (
                        (
                            (
                                fun
                                nonrec
                                (
                                    Set0
                                    0
                                )
                                (
                                    for
                                    (
                                        1
                                    )
                                    Prop0
                                )
                                (
                                    ind
                                    Prop0
                                    "Eq"
                                    (
                                        2
                                    )
                                    (
                                        (
                                            ()
                                            (
                                                2
                                            )
                                        )
                                    )
                                )
                            )
                            8
                            1
                        )
                        5
                    )
                )
                (
                    (
                        (
                            fun
                            nonrec
                            (
                                Set0
                                0
                            )
                            (
                                for
                                (
                                    1
                                )
                                Prop0
                            )
                            (
                                ind
                                Prop0
                                "Eq"
                                (
                                    2
                                )
                                (
                                    (
                                        ()
                                        (
                                            2
                                        )
                                    )
                                )
                            )
                        )
                        9
                        8
                    )
                    6
                )
            )
            (
                (
                    0
                    (
                        fun
                        nonrec
                        (
                            (
                                (
                                    (
                                        fun
                                        nonrec
                                        (
                                            Set0
                                            0
                                        )
                                        (
                                            for
                                            (
                                                1
                                            )
                                            Prop0
                                        )
                                        (
                                            ind
                                            Prop0
                                            "Eq"
                                            (
                                                2
                                            )
                                            (
                                                (
                                                    ()
                                                    (
                                                        2
                                                    )
                                                )
                                            )
                                        )
                                    )
                                    6
                                    5
                                )
                                3
                            )
                        )
                        (
                            (
                                (
                                    fun
                                    nonrec
                                    (
                                        Set0
                                        0
                                    )
                                    (
                                        for
                                        (
                                            1
                                        )
                                        Prop0
                                    )
                                    (
                                        ind
                                        Prop0
                                        "Eq"
                                        (
                                            2
                                        )
                                        (
                                            (
                                                ()
                                                (
                                                    2
                                                )
                                            )
                                        )
                                    )
                                )
                                7
                                6
                            )
                            4
                        )
                        1
                    )
                )
            )
        )
        1
    )
)
