june/src/codegen/tests/snapshots/june__codegen__tests__list.snap
---
source: june/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    fun
    nonrec
    (
        Set0
    )
    Set0
    (
        ind
        Set0
        "List"
        ()
        (
            (
                (
                    2
                    1
                )
                ()
            )
            (
                ()
                ()
            )
        )
    )
)
