june/src/codegen/tests/snapshots/june__codegen__tests__stdlib.snap
---
source: june/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    ind
    Prop0
    "DummyLeaf"
    ()
    ()
)
